Fix the offscreen sidebar

--- a/components/MapPage/Sidebar/sidebar.css
+++ b/components/MapPage/Sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 30rem;
