--- a/components/MapPage/mapPage.css
+++ b/components/MapPage/mapPage.css
@@ -6,7 +6,7 @@
 
 .map-page > header {
   position: absolute;
-  top: 0;
+  top: 50;
   right: 0;
   opacity: 50%;
 }
